Fix arrow jump after animation ends on access item dropdown

--- a/app/assets/stylesheets/partials/admin/_access_tree.scss
+++ b/app/assets/stylesheets/partials/admin/_access_tree.scss
@@ -101,7 +101,6 @@
           i {
             transform: rotate(-90deg);
             @include transition(0.3s);
-            padding-bottom: 2px;
           }
         }
 
